# fastapi

./: README.md  pyproject.toml
app/: main.py
