[project]
name = "hospital-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.5",
    "fastapi>=0.138.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.13.4",
    "pymysql>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]
